--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -14,9 +14,9 @@ jobs:
         with:
           node-version: 22.15.0
       - run: npm i
-        working-directory: ./Lab_07_05
+        working-directory: Lab_07_05
       - run: npm run build
-        working-directory: ./Lab_07_05
+        working-directory: Lab_07_05
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
